docs: update codebase fixes plan with second-round analysis findings
Added 10 new tasks (35 total). Elevated java_opts validation to Critical
(C7). New findings: H17 (int crash), H18 (1D grid), M23-M30 (backup,
atomic writes, grid ValueError, indexed fields, test gaps).

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>